Added gitignore for ipynb checkpoints

--- a/1. Mexiko Create filenames filename-mappings and infofiles.ipynb
+++ b/1. Mexiko Create filenames filename-mappings and infofiles.ipynb
@@ -4128,7 +4128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -4138,17 +4138,17 @@
       "text/plain": [
        "[('Chichén Itzá', 376),\n",
        " ('Teotihuacan', 272),\n",
+       " ('Empty region/place', 234),\n",
        " ('Uxmal', 113),\n",
        " ('Labna', 69),\n",
        " ('Kabah', 60),\n",
        " ('Yucatan', 51),\n",
        " ('Merida', 42),\n",
        " ('Mitla', 38),\n",
-       " ('Xochicalco', 37),\n",
-       " ('Oaxaca', 36)]"
+       " ('Xochicalco', 37)]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4160,9 +4160,13 @@
     "        place = row[\"Ort, foto\"].split(\",\")[-1].strip()\n",
     "        #print(\"full: {}\\n place: {}\\n\".format(row[\"Ort, foto\"], place))\n",
     "        place_counter[place] += 1\n",
-    "    elif pd.isnull(row[\"Ort, foto\"]) and pd.notnull(row[\"Region, foto\"]):\n",
+    "    elif pd.isnull(row[\"Ort, foto\"]) and pd.notnull(row[\"Region, foto\"]): # city/village/place not specified, but\n",
     "        place = row[\"Region, foto\"].split(\",\")[-1].strip()\n",
+    "        #print(\"full: {}\\n place: {}\\n\".format(row[\"Region, foto\"], place))\n",
     "        place_counter[place] += 1\n",
+    "    else: # neither place nor region is specified\n",
+    "        place_counter[\"Empty region/place\"] += 1\n",
+    "        #print(\"No region or place! Fotonummer: {}\".format(row[\"Fotonummer\"]))\n",
     "place_counter.most_common(10)"
    ]
   },
