Add place-mapping wikitable

--- a/1. Mexiko Create filenames filename-mappings and infofiles.ipynb
+++ b/1. Mexiko Create filenames filename-mappings and infofiles.ipynb
@@ -4128,7 +4128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -4138,17 +4138,31 @@
       "text/plain": [
        "[('Chichén Itzá', 376),\n",
        " ('Teotihuacan', 272),\n",
-       " ('Empty region/place', 234),\n",
+       " ('n/a', 234),\n",
        " ('Uxmal', 113),\n",
        " ('Labna', 69),\n",
        " ('Kabah', 60),\n",
        " ('Yucatan', 51),\n",
        " ('Merida', 42),\n",
        " ('Mitla', 38),\n",
-       " ('Xochicalco', 37)]"
+       " ('Xochicalco', 37),\n",
+       " ('Oaxaca', 36),\n",
+       " ('Tula', 32),\n",
+       " ('Teopanzolco', 18),\n",
+       " ('Monte Albán', 17),\n",
+       " ('Villahermosa', 16),\n",
+       " ('Sayil', 9),\n",
+       " ('Veracruz', 5),\n",
+       " ('Tenayuca', 5),\n",
+       " ('Dzitas', 5),\n",
+       " ('Ticul', 2),\n",
+       " ('Xlapak', 2),\n",
+       " ('Mexico Distrito Federal', 1),\n",
+       " ('Monte Alban', 1),\n",
+       " ('Coyoacan', 1)]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4165,9 +4179,170 @@
     "        #print(\"full: {}\\n place: {}\\n\".format(row[\"Region, foto\"], place))\n",
     "        place_counter[place] += 1\n",
     "    else: # neither place nor region is specified\n",
-    "        place_counter[\"Empty region/place\"] += 1\n",
+    "        place_counter[\"n/a\"] += 1\n",
     "        #print(\"No region or place! Fotonummer: {}\".format(row[\"Fotonummer\"]))\n",
-    "place_counter.most_common(10)"
+    "place_counter.most_common()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{| class=\"wikitable\"\n",
+      "|-\n",
+      "! Place\n",
+      "! Frequency\n",
+      "! Commons cat\n",
+      "! Wikidata item\n",
+      "|-\n",
+      "| Chichén Itzá\n",
+      "| 376\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Teotihuacan\n",
+      "| 272\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| n/a\n",
+      "| 234\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Uxmal\n",
+      "| 113\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Labna\n",
+      "| 69\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Kabah\n",
+      "| 60\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Yucatan\n",
+      "| 51\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Merida\n",
+      "| 42\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Mitla\n",
+      "| 38\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Xochicalco\n",
+      "| 37\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Oaxaca\n",
+      "| 36\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Tula\n",
+      "| 32\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Teopanzolco\n",
+      "| 18\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Monte Albán\n",
+      "| 17\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Villahermosa\n",
+      "| 16\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Sayil\n",
+      "| 9\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Veracruz\n",
+      "| 5\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Tenayuca\n",
+      "| 5\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Dzitas\n",
+      "| 5\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Ticul\n",
+      "| 2\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Xlapak\n",
+      "| 2\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Mexico Distrito Federal\n",
+      "| 1\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Monte Alban\n",
+      "| 1\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "| Coyoacan\n",
+      "| 1\n",
+      "|\n",
+      "|\n",
+      "|-\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "place_table = \"\"\n",
+    "place_table += \"\"\"{| class=\"wikitable\"\n",
+    "|-\n",
+    "! Place\n",
+    "! Frequency\n",
+    "! Commons cat\n",
+    "! Wikidata item\n",
+    "|-\n",
+    "\"\"\"\n",
+    "\n",
+    "for place, freq in place_counter.most_common():\n",
+    "    #print(place, freq)\n",
+    "    place_table += \"| \" + str(place) + \"\\n| \" + str(freq) + \"\\n|\\n|\\n|-\\n\" \n",
+    "\n",
+    "place_table += \"\"\n",
+    "print(place_table)\n"
    ]
   },
   {
